<resources>
    <string name="app_name">Buggy Movi</string>
    <string name="theMovieDBAPI_key_parameter">api_key</string>
    <string name="theMovieDBAPI_key">7a0f090baebf83c2c4b2e49a59a85ebc</string>
    <string name="menuToGridKey">menuToGridKey</string>


    <string name="movieSelectedkey">movieselected</string>


    <string name="popular">Popular Movies</string>
    <string name="top">Top Rated Movies</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="favourites">Favourites</string>
    <string name="latest">Latest Movie</string>


    <string name="AboutMenu">About</string>
    <string name="ClearFavouritesMenu">Clear Favourites</string>
    <string name="aboutBlurb1">Welcome to Buggy Movi! Quickly browse through the different categories
    to discover the next movie you will watch. You can make your own favourites list which you can use for reference later on.</string>
    <string name="TMDbnotice">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>


    <string name="TrailerTitle">Trailers</string>
    <string name="ReviewsTitle">Reviews</string>
    <string name="noTrailer">Sorry, there are no trailers available.</string>

    <string name="favouriteTitle">Favourite</string>

    <string name="favouritelistKEY">com.BuggyMovi.Lemu.favouritelist</string>

    <string name="detailabel">Movie Details</string>
</resources>
